Fixed overlapping errors on buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -564,8 +564,7 @@ header {
 
 .carousel-control {
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 75%;
   z-index: 10;
   background-color: rgba(44, 62, 80, 0.5);
   color: white;
